Add auto-publish functionality to maven script
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>